# cpp_cmake_google_test

./: CMakeLists.txt  README.md  _build.sh  _call_cmake.sh  _test.sh  fmt.sh
coverage-report/: cmd_line  index.html
coverage-report/sources/: Arithmetic.cpp.func-c.html  Arithmetic.cpp.func.html  Arithmetic.cpp.gcov.html  index.html
headers/: Arithmetic.hpp
sources/: Arithmetic.cpp  main.cpp
tests/: TestArithmetic.cpp
